[gd_scene load_steps=3 format=3 uid="uid://cp4302tbhbutl"]

[ext_resource type="Script" uid="uid://buiugbmlcte8n" path="res://scripts/Problem.gd" id="1_nwktk"]
[ext_resource type="Texture2D" uid="uid://dj6f1c28a6227" path="res://imagenes/problemas.jpg" id="2_e3u0d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nwktk")

[node name="LBL_RESOLUCION" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_top = 442.0
offset_right = 503.0
offset_bottom = 700.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Aqui irá el enunciado del problema"
horizontal_alignment = 1

[node name="LBL_PROBLEMA" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -444.0
offset_top = 79.0
offset_right = 445.0
offset_bottom = 269.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Aqui irá el enunciado del problema"
horizontal_alignment = 1
autowrap_mode = 3

[node name="BTN_RESOLVER" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.524
anchor_bottom = 0.524
offset_left = 618.0
offset_top = 284.08
offset_right = 798.0
offset_bottom = 315.08
grow_vertical = 2
text = "MOSTRAR SOLUCIÓN"

[node name="BTN_SIGUIENTE" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 310.0
offset_right = 360.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
text = "SIGUIENTE PROBLEMA
"

[node name="LBL_METODO" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 20.0
offset_right = -136.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Método"

[node name="LBL_DIFICULTAD" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 124.0
offset_top = 20.0
offset_right = 224.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Dificultad"

[node name="FONDO_PROB" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_e3u0d")

[node name="LINE_EDIT_RESPUESTA" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 350.0
offset_right = 350.0
offset_bottom = 385.0
grow_horizontal = 2
placeholder_text = "INGRESE SU RESPUESTA"
alignment = 1

[node name="BTN_VALIDAR" type="Button" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 850.0
offset_right = 1011.0
offset_bottom = 881.0
text = "REVISAR"

[node name="LBL_PUNTAJE" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 52.0
offset_right = 339.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="LBL_TIEMPO" type="Label" parent="."]
layout_mode = 0
offset_left = 1780.0
offset_top = 91.0
offset_right = 1916.0
offset_bottom = 131.0

[node name="TimerProblema" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="TimerVisual" type="Timer" parent="."]

[connection signal="pressed" from="BTN_RESOLVER" to="." method="_on_btn_resolver_pressed"]
[connection signal="pressed" from="BTN_SIGUIENTE" to="." method="_on_btn_siguiente_pressed"]
[connection signal="text_changed" from="LINE_EDIT_RESPUESTA" to="." method="_on_line_edit_respuesta_text_changed"]
[connection signal="pressed" from="BTN_VALIDAR" to="." method="_on_btn_validar_pressed"]
[connection signal="timeout" from="TimerProblema" to="." method="_on_timer_problema_timeout"]
[connection signal="timeout" from="TimerProblema" to="." method="_on_TimerProblema_timeout"]
[connection signal="timeout" from="TimerVisual" to="." method="_on_timer_visual_timeout"]
[connection signal="timeout" from="TimerVisual" to="." method="_on_TimerVisual_timeout"]
